# crewai-fastapi-streamlit-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  testeAPIStreamlit.py
app/: main.py
