[tool.poetry]
name = "crewai-projetct"
version = "0.1.0"
description = ""
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"
crewai = {extras = ["tools"], version = "^0.119.0"}
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
